--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -26,191 +26,5 @@
     "delete_account": "Delete account",
     "delete_account_and_data": "delete your account and all associated data",
     "without_+": "Without (+)",
-    "profile_photo": "Profile photo",
-    "gallery": "Gallery",
-    "group_photo": "Group photo",
-    "please_wait_till_loading_chats": "Please wait till loading chats...",
-    "delete_account_dialog_title": "Are you sure you want to delete your account?",
-    "delete_account_dialog_subtitle": "Please be aware that this action is irreversible. By proceeding, you will permanently delete your account and all associated data",
-    "reset": "Reset",
-    "forget_password": "Forget password?",
-    "signin": "Sign in",
-    "dont_have_account": "Don't have an account? Sign Up",
-    "already_have_account": "Already have an account? Login",
-    "phone_number_hint": "Phone number without + (eg. 97199999999)",
-    "calls": "Calls",
-    "chats": "Chats",
-    "stories": "Stories",
-    "edit": "Edit",
-    "search_message": "Search for message ....",
-    "connecting": "connecting...",
-    "incoming_wait": "Incoming...",
-    "incoming": "Incoming",
-    "missed": "Missed",
-    "received": "Received",
-    "all": "All",
-    "today": "Today",
-    "yesterday": "Yesterday",
-    "outgoing": "Outgoing",
-    "my_contacts": "My Contacts",
-    "need_access_to_contacts_to_get_accounts": "Need access to contacts to get accounts",
-    "offline": "Offline",
-    "online": "Online",
-    "options": "Options",
-    "new_contact": "New contact",
-    "new_message": "New message",
-    "new_group": "New group",
-    "coming_soon": "Coming soon",
-    "no_recents": "No Recents",
-    "write_message": "Write message",
-    "create_group": "Create group",
-    "search_name": "Search for name...",
-    "done": "Done",
-    "hangedup": "Hanged up",
-    "new_messages": "New messages",
-    "you_must_select_person_at_least": "You must select {} people at least",
-    "allow_member_to_send_message": "Allow Member To Send Message",
-    "gave_access_to_member_to_interact": "Gave access to member to interact",
-    "message_forwarding": "Message Forwarding",
-    "allow_message_forwarding": "Allow message forwarding",
-    "group_name": "Group name",
-    "group_info": "Group Info",
-    "group_members": "Group Members",
-    "enter_group_name_first": "enter group name first",
-    "edit_members": "Edit members",
-    "first_name": "First name",
-    "second_name": "Last name",
-    "created_group_by": "{} CREATED THE GROUP",
-    "see_add_and_delete_members": "See, add and delete members",
-    "share_media": "Share media",
-    "groups_in_common": "Groups in common",
-    "chat_search": "Chat search",
-    "enter_group_name": "Enter group name",
-    "add_members": "Add members",
-    "save": "Save",
-    "info": "Info",
-    "report_contact": "Report contact",
-    "block": "Block",
-    "block_hint": "Are you sure you want to block this user?",
-    "unblock": "Unblock",
-    "unblock_hint": "Are you sure you want to unblock this user?",
-    "blocked_list": "Blocked List",
-    "general": "General",
-    "phone": "Phone",
-    "username": "Username",
-    "notification_sounds": "Notification & Sounds",
-    "notification": "Notification",
-    "notification_sound": "Notification Sound",
-    "show_notification": "Show Notification",
-    "notification_settings": "Notification Settings",
-    "messaging_settings": "Messaging settings",
-    "enter_is_send": "Enter is send",
-    "enter_key_will_send_your_message": "Enter key will send your message",
-    "font_size": "Font Size",
-    "keep_chats_mute": "Keep chats Mute",
-    "mute_chats_will_remain_mute_when_you_received_message": "Mute chats will remain mute when you received message",
-    "turn_on_notifications_toast": "Turn on notificatins from Notifications & Sound",
-    "chat_wallpaper": "Chat Wallpaper",
-    "app_language": "App language",
-    "preferences": "Preferences",
-    "sign_out": "Sign Out",
-    "active_status": "Active status",
-    "me": "Me",
-    "you": "You",
-    "invite_your_friend": "Invite your friend",
-    "delete_message": "Delete the message?",
-    "delete_messages": "Delete all messages?",
-    "delete_for_me": "Delete for me",
-    "delete_for_everyone": "Delete for everyone",
-    "cancel": "Cancel",
-    "dismiss": "Dismiss",
-    "delete_chat": "Delete chat?",
-    "delete_group": "Delete \"{}\" group?",
-    "delete_group_without_name": "Delete group",
-    "you_answerd_from_another_device": "You answerd from another device",
-    "netowrk_not_available": "Network not available",
-    "delete": "Delete",
-    "no_answer": "No answer",
-    "participants_has_left_the_call": "Participants have left the call",
-    "reply_notification": "Reply...",
-    "you_are_no_longer_in_the_group": "You are no longer in the group",
-    "delete_chat_hint": "Are you sure you want to delete this chat?",
-    "in_another_call": "In another call",
-    "call_was_declined": "Call was declined",
-    "call_was_declined_from_another_device": "Call was declined from another device",
-    "cant_make_call": "Can't make the call, try again",
-    "no_message_found": "No message found!",
-    "your_session_is_expired": "Your session is expired",
-    "no_groups": "No groups!",
-    "clear_all_messages": "Clear all messages",
-    "leave_group": "Leave group",
-    "leave_group_question": "Leave \"{}\" Group?",
-    "leave_group_hint": "Only group amdins will be notified that you left the group",
-    "clear_all_messages_question": "Clear all messages from \"{}\"?",
-    "clear_all_messages_hint": "This chat will be empty but wil remain in your chat list",
-    "make_group_admin": "Make group admin",
-    "remove_from_group": "Remove from group",
-    "you_missed_a_call": "You missed a call",
-    "you_are_in_call": "You are in a call!",
-    "user_hangup": "User hangup",
-    "contact_added": "Contact was added",
-    "video_call": "Video call",
-    "audio_call": "Audio call",
-    "login": "Login",
-    "request_to_join_call_has_been_sent": "You sent an invitation to join the call",
-    "you_are_in_another_call": "You are in another call!",
-    "you_must_select_one_person_at_least": "You must select one person at least",
-    "something_went_wrong": "Something went wrong",
-    "make_a_call": "Make a call",
-    "only_admins_can_send_messages": "Only admins can send messages",
-    "profile_image_has_been_updated": "Your profile image has been updated",
-    "add_to_call": "Add to call",
-    "small": "Small",
-    "medium": "Medium",
-    "big": "Big",
-    "no_calls": "No calls",
-    "this_message_was_deleted": "This message was deleted",
-    "full_name": "Full name",
-    "no_contacts": "No contacts",
-    "no_messages": "No messages",
-    "no_results_found": "No result found!",
-    "your_phone_is_enjoying_some_peace_and_quiet": "Your phone is enjoying some peace and quiet",
-    "you_dont_have_any_contacts_yet": "You don't have any contacts yet",
-    "you_have_no_active_chats": "You have no active chats",
-    "try_adjusting_your_search_to_find_what_you_are_looking_for": "Try adjusting your search to find what you are looking for",
-    "dismiss_as_admin": "Dismiss as admin",
-    "info_added": "{} added {}",
-    "info_removed": "{} removed {}",
-    "info_created_group": "{} created group {}",
-    "info_updated_group": "{} updated group's {}",
-    "info_joined": "{} joined",
-    "info_left": "{} left",
-    "info_new_owner": "{} has been assigned as owner",
-    "max_group_members_is": "Max group members is {}",
-    "max_number_of_participants_is": "Max number of participants is {}",
-    "already_logged_in": "You are already logged in on another device",
-    "revoke_session_ask": "Do you want to logout the other device?",
-    "reject": "rejcted",
-    "hangup": "hangup",
-    "info_audio_call": "voice call {}",
-    "info_video_call": "video call {}",
-    "info_group_audio_call": "{} start a voice call",
-    "info_group_video_call": "{} start a video call",
-    "ongoning_call": "Ongoing Call",
-    "ongoing_call_notification_body": "ongoing {} call",
-    "voice": "voice",
-    "qr_profile": "Qr Profile",
-    "no_call_permission": "Camera and microphone permissions required. Please enable them in your device settings.",
-    "user_blocked": "You have blocked this user",
-    "the_information_has_been_updated_successfully": "The information has been updated successfully",
-    "privacy_policy": "Privacy Policy",
-    "report_": "Report {}?",
-    "report": "Report",
-    "report_block": "Report and block",
-    "report_hint": "The last 5 messages from this contact will be forweareded to Masar chat. This contact will not be notified",
-    "report_message_hint": "This message will be forwarded to Masar chat. This contact will not be notified",
-    "this_message_has_been_reported": "This message has been reported",
-    "signin_agreement": "By signing up, you agree to our terms & privacy policy",
-    "please_Agree_to_our_terms_&_privacy_policy_first": "Please agree to our terms & privacy policy first",
-    "privacy_policy_url": "Privacy policy URL"
+    "profile_photo": "Profile photo"
 }
